first go at addressing comments on draft

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -139,6 +139,38 @@ eprint = {https://doi.org/10.1287/mnsc.5.1.5}
   year={2013},
   publisher={Nature Publishing Group}
 }
+@article{Hilbe2015,
+title = "Partners or rivals? Strategies for the iterated prisoner's dilemma",
+journal = "Games and Economic Behavior",
+volume = "92",
+pages = "41 - 52",
+year = "2015",
+issn = "0899-8256",
+doi = "https://doi.org/10.1016/j.geb.2015.05.005",
+url = "http://www.sciencedirect.com/science/article/pii/S0899825615000822",
+author = "C. Hilbe and A. Traulsen and K. Sigmund",
+}
+@article{Hilbe2013b,
+  title={Evolution of extortion in iterated prisoner’s dilemma games},
+  author={C. Hilbe and M. A. Nowak and K. Sigmund},
+  journal={Proceedings of the National Academy of Sciences},
+  pages={201214834},
+  year={2013},
+  publisher={National Acad Sciences}
+}
+@article{Hilbe2013,
+    author = {C. Hilbe and M. A. Nowak and A. Traulsen},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Adaptive Dynamics of Extortion and Compliance},
+    year = {2013},
+    month = {11},
+    volume = {8},
+    url = {https://doi.org/10.1371/journal.pone.0077886},
+    pages = {1-9},
+    number = {11},
+    doi = {10.1371/journal.pone.0077886}
+}
 @book{kepner2011,
   title={Graph algorithms in the language of linear algebra},
   author={Kepner, Jeremy and Gilbert, John},
