--- a/tex/proof_lemma_four.tex
+++ b/tex/proof_lemma_four.tex
@@ -39,7 +39,7 @@ and the interior solution $p^*$ necessarily satisfies the condition
 \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p^*) = 0\).
 
 \textbf{Case 3:} The optimum is away from the boundary of the optimization domain
-but some constraints are satisfied. The candidate solutions in this case
+but some constraints are equalities. The candidate solutions in this case
 are any combinations of $p_j \in \{0, 1\} \quad \text{and} \quad \frac{d}{dp_k} 
 \sum\limits_{i=1} ^ N  u_q^{(i)}(p) = 0$ 
 forall $ j \in J \text{ \& } k \in K \text{ forall } J, K
