--- a/tex/proof_theorem_one.tex
+++ b/tex/proof_theorem_one.tex
@@ -1,12 +1,14 @@
-\begin{proof} The utility of a memory one player \(p\) against an opponent \(q\),
+The utility of a memory one player \(p\) against an opponent \(q\),
 \(u_q(p)\), can be written as a ratio of two quadratic forms on \(R^4\).
+
+\begin{proof}
 
 In Section~\ref{section:utility}, it was discussed that \(u_q(p)\) it's the product
 of the steady states \(v\) and the PD payoffs,
 
 \[u_q(p) = v \cdot (R, S, T, P).\]
 
-More specifically,
+More specifically, with \((R, P, S, T) = (3, 1, 0, 5)\)
 
 \begingroup
 \footnotesize
@@ -30,7 +32,7 @@ More specifically,
 \end{equation}
 \endgroup
 
-Let's consider the numerator of the \(u_q(p)\). The cross product terms \(p_ip_j\)
+Let us consider the numerator of the \(u_q(p)\). The cross product terms \(p_ip_j\)
 are given by,
 
 \begingroup
