--- a/tex/proof_theorem_three.tex
+++ b/tex/proof_theorem_three.tex
@@ -1,12 +1,14 @@
-\begin{proof} Utility \(u_q(p)\) is non concave and neither are it's numerator or
+The utility \(u_q(p)\) is non concave and neither are it's numerator or
 denominator. Furthermore, the denominator is not always strictly positive.
 
-Utility \(u_q(p)\) is non concave because the concavity condition fails for at
-least one point, Appendix~\ref{appendix:non_concave}.
+\begin{proof}
+
+The utility \(u_q(p)\) is non concave because the concavity condition fails for at
+least one pair of points see Appendix~\ref{appendix:non_concave}.
 
 Furthermore, regarding the numerator and denominator of \(u_q(p)\)
 in~\cite{Anton2014} it is stated that a quadratic form will be concave if and
-only if it's symmetric matrix is negative semi definite. A matrix \(A\) is
+only if it's symmetric matrix is semi-negative definite. A matrix \(A\) is
 semi-negative definite if:
 
 \begin{equation}\label{def:semi_negative}
