clean bibliography and fix proofs

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -27,7 +27,7 @@ eprint = {https://doi.org/10.1287/mnsc.5.1.5}
 @article{Axelrod1980a,
     ISSN = {00220027, 15528766},
     URL = {http://www.jstor.org/stable/173932},
-    author = {Robert Axelrod},
+    author = {Axelrod, Robert},
     journal = {The Journal of Conflict Resolution},
     number = {1},
     pages = {3-25},
@@ -39,7 +39,7 @@ eprint = {https://doi.org/10.1287/mnsc.5.1.5}
 @article{Axelrod1980b,
     ISSN = {00220027, 15528766},
     URL = {http://www.jstor.org/stable/173638},
-    author = {Robert Axelrod},
+    author = {Axelrod, Robert},
     journal = {The Journal of Conflict Resolution},
     number = {3},
     pages = {379-403},
@@ -118,7 +118,7 @@ eprint = {https://doi.org/10.1287/mnsc.5.1.5}
     doi = {10.1371/journal.pone.0120625}
 }
 @article{Knight2018,
-    author = {Knight, Vincent AND Harper, Marc AND Glynatsi, Nikoleta E. AND Campbell, Owen},
+    author = {Knight, Vincent and Harper, Marc and Glynatsi, Nikoleta E. and Campbell, Owen},
     journal = {PLOS ONE},
     publisher = {Public Library of Science},
     title = {Evolution reinforces cooperation with the emergence of self-recognition mechanisms: An empirical study of strategies in the Moran process for the iterated prisoner’s dilemma},
@@ -148,18 +148,18 @@ year = "2015",
 issn = "0899-8256",
 doi = "https://doi.org/10.1016/j.geb.2015.05.005",
 url = "http://www.sciencedirect.com/science/article/pii/S0899825615000822",
-author = "C. Hilbe and A. Traulsen and K. Sigmund",
+author = "Hilbe, Christian and Traulsen, Arne and Sigmund, Karl",
 }
 @article{Hilbe2013b,
   title={Evolution of extortion in iterated prisoner’s dilemma games},
-  author={C. Hilbe and M. A. Nowak and K. Sigmund},
+  author={Hilbe, Christian and Nowak, Martin and Sigmund, Karl},
   journal={Proceedings of the National Academy of Sciences},
   pages={201214834},
   year={2013},
   publisher={National Acad Sciences}
 }
 @article{Hilbe2013,
-    author = {C. Hilbe and M. A. Nowak and A. Traulsen},
+    author = {Hilbe, Christian and Nowak, Martin and Traulsen, Arne},
     journal = {PLOS ONE},
     publisher = {Public Library of Science},
     title = {Adaptive Dynamics of Extortion and Compliance},
@@ -204,7 +204,7 @@ year = {2016}
   publisher={Princeton University Press}
 }
 @article{Hongyan2014,
-author = {Hongyan Cai and Yanfei Wang and Tao Yi},
+author = {Cai, Hongyan and Wang, Yanfei and Yi, Tao},
 title = {An approach for minimizing a quadratically constrained fractional 
 quadratic problem with application to the communications over wireless channels
 },
@@ -266,7 +266,6 @@ url="http://dx.doi.org/10.1007/s10107-007-0181-x"
 }
 @InProceedings{Mokus1978,
 author="Mo{\v{c}}kus, J.",
-editor="Marchuk, G. I.",
 title="On bayesian methods for seeking the extremum",
 booktitle="Optimization Techniques IFIP Technical Conference Novosibirsk, July 1--7, 1974",
 year="1975",
@@ -296,7 +295,7 @@ isbn="978-3-540-37497-8"
   publisher={Springer}
 }
 @article{Harper2017,
-    author = {Harper, Marc AND Knight, Vincent AND Jones, Martin AND Koutsovoulos, Georgios AND Glynatsi, Nikoleta E. AND Campbell, Owen},
+    author = {Harper, Marc and Knight, Vincent and Jones, Martin and Koutsovoulos, Georgios and Glynatsi, Nikoleta E. and Campbell, Owen},
     journal = {PLOS ONE},
     publisher = {Public Library of Science},
     title = {Reinforcement learning produces dominant strategies for the Iterated Prisoner’s Dilemma},
@@ -347,7 +346,7 @@ isbn="978-3-540-37497-8"
 }
 @article{hunter2007matplotlib,
   title = {{Matplotlib: A 2D graphics environment}},
-  author = {Hunter, J. D.},
+  author = {Hunter, John D.},
   journal = {Computing In Science \& Engineering},
   volume = {9},
   number = {3},
@@ -357,12 +356,12 @@ isbn="978-3-540-37497-8"
 }
 @article{sympy,
   title = {SymPy: symbolic computing in Python},
-  author = {Meurer, A. and Smith, C. P. and Paprocki, M. and \v{C}ert\'{i}k, O. 
-  and Kirpichev, S. B. and Rocklin, M. and Kumar, A. and Ivanov, S. and Moore, J. K.
-  and Singh, S. and Rathnayake, T. and Vig, S. and Granger, B. E. and Muller, R. P.
-  and Bonazzi, F. and Gupta, H. and Vats, S. and Johansson, F. and Pedregosa, F.
-  and Curry, M. J. and Terrel, A. R. and Rou\v{c}ka, \v{S}. and Saboo, A. and
-  Fernando, I. and Kulal, S. and Cimrman, R. and Scopatz, A.},
+  author = {Meurer, Aaron and Smith, Christopher and Paprocki, Mateusz and
+  Čertík, Ondřej and Kirpichev, Sergey and Rocklin, Matthew and Kumar, AMiT and
+  Ivanov, Sergiu and Moore, Jason and Singh, Sartaj and Rathnayake, Thilina and
+  Vig, Sean and Granger, Brian and Muller, Richard and Bonazzi, Francesco and
+  Gupta, Harsh and Vats, Shivam and Johansson, Fredrik and Pedregosa, Fabian and
+  Scopatz, Anthony},
   year = 2017,
   volume = 3,
   journal = {PeerJ Computer Science},
@@ -372,7 +371,7 @@ isbn="978-3-540-37497-8"
 }
 @article{walt2011numpy,
   title = {{The NumPy array: a structure for efficient numerical computation}},
-  author = {Walt, S. and Colbert, S. C. and Varoquaux, G.},
+  author = {Van Der Walt, Stefan and Colbert, S. Chris and Varoquaux, Gael},
   journal = {Computing in Science \& Engineering},
   volume = {13},
   number = {2},
@@ -397,7 +396,7 @@ isbn="978-3-540-37497-8"
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DATA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @misc{glynatsi2019,
-  author       = {Nikoleta E. Glynatsi},
+  author       = {Glynatsi, Nikoleta E.},
   title        = {{Raw data for: "Stability of defection,
                    optimisation of strategies and the limits of
                    memory in the Prisoner's Dilemma."}},
@@ -409,10 +408,10 @@ isbn="978-3-540-37497-8"
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%PRE PRINT%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @article{Knight2019,
-  author    = {Vincent A. Knight and
-               Marc Harper and
-               Nikoleta E. Glynatsi and
-               Jonathan Gillard},
+  author    = {Knight, Vincent A. and
+               Harper, Marc and
+               Glynatsi, Nikoleta E. and
+               Gillard, Jonathan},
   title     = {Recognising and evaluating the effectiveness of extortion in the Iterated
                Prisoner's Dilemma},
   journal   = {CoRR},
