--- a/tex/proof_theorem_three.tex
+++ b/tex/proof_theorem_three.tex
@@ -13,8 +13,10 @@ semi-negative definite if:
 
 \begin{equation}\label{def:semi_negative}
 |A|_i \leq 0 \text{ for } i \text{ is odd and } |A|_i \geq 0  \text{ for } i
-\text{ is even.}
+\text{ is even,}
 \end{equation}
+
+where \(|A|_i\) is the eigenvalues of the submatrix \(A_i\).
 
 For (\ref{eq:optimisation_quadratic}), neither \(\frac{1}{2}pQp^T + cp + a\)
 or \(\frac{1}{2}p\bar{Q}p^T + \bar{c}p + \bar{a}\) are concave because for an even \(i=2\):
