address non trivial comments on draft

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -394,6 +394,18 @@ isbn="978-3-540-37497-8"
   title = {Elementary Linear Algebra: Applications Version},
   year = 2014
 }
+@article{Matsui1992,
+title = "Best response dynamics and socially stable strategies",
+journal = "Journal of Economic Theory",
+volume = "57",
+number = "2",
+pages = "343 - 362",
+year = "1992",
+issn = "0022-0531",
+doi = "https://doi.org/10.1016/0022-0531(92)90040-O",
+url = "http://www.sciencedirect.com/science/article/pii/002205319290040O",
+author = "Matsui, Akihiko",
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DATA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @misc{glynatsi2019,
   author       = {Glynatsi, Nikoleta E.},
